# execsql

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  NOTICE  README.md  SECURITY.md  TODO.md  docker-compose.yml  justfile  pyproject.toml  zensical.toml
.claude/: project_context.md
.claude/agents/: changelog-manager.md  code-oracle.md  code-reviewer.md  dba.md  docs-author.md  herald.md  inspector.md  liaison.md  migration-coder.md  monolith-navigator.md  oracle.md  patcher.md  qa.md  scribe.md  test-engineer.md
.claude/commands/: code-oracle.md  migrate.md  review-changes.md  test-module.md  update-changelog.md  where-is.md
.claude/research/: analysis-2026-04-01.md
.claude/state/: status.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml
docs/: change_log.md  configuration.md  contributors.md  copyright.md  debugging.md  documentation.md  encoding.md  examples.md  formatter.md  index.md  installation.md  logging.md  metacommands.md  requirements.md  security.md  sql_syntax.md  substitution_vars.md  syntax.md  usage.md  using_scripts.md
docs/about/: contributors.md  copyright.md  divergence.md
docs/api/: cli.md  db.md  exporters.md  importers.md  index.md  metacommands.md
docs/dev/: adding_db_adapters.md  adding_exporters.md  adding_importers.md  adding_metacommands.md  architecture.md
docs/getting-started/: installation.md  requirements.md  syntax.md
docs/guides/: debugging.md  documentation.md  encoding.md  examples.md  formatter.md  logging.md  sql_syntax.md  usage.md  using_scripts.md
docs/images/: connect.b64  pause_terminal_sm.b64  unit_conversions.b64
docs/reference/: configuration.md  metacommands.md  security.md  substitution_vars.md
extras/plugin-template/: README.md  pyproject.toml
extras/plugin-template/src/execsql_plugin_YOURNAME/: __init__.py
extras/plugin-template/tests/: test_plugin.py.example
extras/vscode-execsql/: README.md  package.json
extras/vscode-execsql/src/: extension.ts
extras/vscode-execsql/syntaxes/: execsql.tmLanguage.json
scripts/: generate_vscode_grammar.py
src/execsql/: __init__.py  __main__.py  _cli_dsn.py  _cli_help.py  _cli_run.py  api.py  cli.py  config.py  constants.py  exceptions.py  format.py  models.py  parser.py  plugins.py  script.py  state.py  types.py
src/execsql/cli/: __init__.py  dsn.py  help.py  lint.py  lint_ast.py  run.py
src/execsql/data/: execsql.conf.template
src/execsql/db/: __init__.py  access.py  base.py  dsn.py  duckdb.py  factory.py  firebird.py  mysql.py  oracle.py  postgres.py  sqlite.py  sqlserver.py
src/execsql/debug/: __init__.py  repl.py
src/execsql/exporters/: __init__.py  base.py  delimited.py  duckdb.py  feather.py  html.py  json.py  latex.py  markdown.py  ods.py  parquet.py  pretty.py  protocol.py  raw.py  sqlite.py  templates.py  values.py  xls.py  xlsx.py  xml.py  yaml.py  zip.py
src/execsql/gui/: __init__.py  base.py  console.py  desktop.py  tui.py
src/execsql/importers/: __init__.py  base.py  csv.py  feather.py  json.py  ods.py  xls.py
src/execsql/lsp/: __init__.py  __main__.py  analysis.py  (+5 more)
templates/: README.md  READ_ME.rst  config_settings.sqlite  example_config_prompt.sql  execsql.conf  make_config_db.sql  md_compare.sql  md_glossary.sql  md_upsert.sql  pg_compare.sql  pg_glossary.sql  pg_upsert.sql  script_template.sql  ss_compare.sql  ss_glossary.sql  ss_upsert.sql
tests/: conftest.py  test_api.py  test_ast.py  test_ast_parser.py  test_cli.py  test_cli_e2e.py  test_cli_run.py  test_config.py  test_config_data.py  test_config_extended.py  test_constants.py  test_debug_repl.py  test_engine.py  test_error_messages.py  test_exceptions.py  test_executor.py  test_format.py  test_integration.py  test_integration_duckdb.py  test_integration_mysql.py  test_integration_postgres.py  test_lsp.py  test_mail.py  test_metacommands.py  test_metacommands_connect.py  test_metacommands_extended.py  test_metacommands_io.py  test_metacommands_script_ext.py  test_models.py  test_package.py  test_parser.py  test_parser_params.py  test_plugins.py  test_registry.py  test_script.py  test_state.py  test_types.py
tests/cli/: test_cli.py  test_cli_e2e.py  test_cli_run.py  test_lint.py  test_ping.py  test_profile.py
tests/db/: test_base.py  test_db_adapters_mocked.py  test_dsn.py  test_duckdb.py  test_factory.py  test_postgres.py  test_sqlite.py  test_sqlite_extra.py
tests/exporters/: test_base.py  test_db.py  test_delimited.py  test_duckdb_exporter.py  test_exporters.py  test_feather.py  test_html_extended.py  test_html_latex.py  test_json.py  test_json_extended.py  test_latex_extended.py  test_markdown.py  test_ods.py  test_parquet.py  test_pretty_extended.py  test_raw_extended.py  test_sqlite_exporter.py  test_templates.py  test_templates_extended.py  test_values_extended.py  test_xls_xlsx.py  test_xlsx.py  test_xml.py  test_yaml.py  test_zip.py
tests/gui/: test_backends.py  test_compare_stats.py  test_compute_row_diffs.py
tests/importers/: test_base_extended.py  test_csv_edge_cases.py  test_csv_importer.py  test_feather_importer.py  test_json_importer.py  test_ods_importer.py  test_xls_importer.py
tests/integration/: conftest.py  test_dsn.py  test_duckdb.py  test_mysql.py  test_postgres.py  test_sqlite.py
tests/metacommands/: test_assert.py  test_breakpoint.py  test_connect.py  test_io_export.py  test_io_import.py  test_metacommands.py  test_metacommands_data.py  test_metacommands_extended.py  test_metacommands_fileops_extra.py  test_metacommands_io.py  test_metacommands_io_write_extra.py  test_metacommands_script_ext.py  test_metacommands_system.py  test_metacommands_system_extra.py  test_pg_upsert.py  test_row_count.py  test_show_scripts.py
tests/scripts/: test_sql_scripts.py
tests/utils/: test_auth.py  test_auth_extra.py  test_crypto.py  test_datetime.py  test_errors.py  test_errors_extra.py  test_fileio.py  test_fileio_extra.py  test_numeric.py  test_regex.py  test_strings.py  test_timer.py  test_timer_extra.py
(+40 files in other folders)
