[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "execsql2"
version = "2.3.0"
description = "Runs a SQL script against a PostgreSQL, SQLite, MariaDB/MySQL, DuckDB, Firebird, MS-Access, MS-SQL-Server, or Oracle database, or an ODBC DSN. Provides metacommands to import and export data, copy data between databases, conditionally execute SQL and metacommands, and dynamically alter SQL and metacommands with substitution variables."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.txt" }
authors = [
    { name = "Dreas Nielsen", email = "cortice@tutanota.com" },
]
maintainers = [
    { name = "Caleb Grant", email = "grantcaleb22@gmail.com" },
]
keywords = [
    "SQL", "Postgres", "PostgreSQL", "SQLite", "Firebird",
    "Access", "SQL Server", "MySQL", "MariaDB", "ODBC", "Oracle", "DuckDB",
    "database", "ETL", "CSV", "TSV", "XML", "HTML", "JSON", "LaTeX",
    "OpenDocument", "table", "DBMS", "query", "script", "import", "export",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
]
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "sqlglot>=25.0",
    "textual>=0.47.0",
    "typer>=0.12",
]

[project.optional-dependencies]
# Database drivers
postgres = ["psycopg2-binary"]
mysql = ["pymysql"]
mssql = ["pyodbc"]
duckdb = ["duckdb"]
firebird = ["firebird-driver"]
oracle = ["oracledb"]
odbc = ["pyodbc"]
# Feature bundles
formats = ["odfpy", "xlrd", "openpyxl", "Jinja2", "polars", "tables"]
auth = ["keyring"]
# Convenience groups
all-db = [
    "psycopg2-binary",
    "pymysql",
    "pyodbc",
    "duckdb",
    "firebird-driver",
    "oracledb",
]
all = [
    "execsql2[all-db]",
    "execsql2[formats]",
    "execsql2[auth]",
]
dev = [
    "build>=1.2.2.post1",
    "bump-my-version>=1.2.7",
    "markdown-include>=0.8",
    "mkdocstrings-python>=2.0.3",
    "pre-commit>=3.5.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4",
    "tox-uv>=1.13.1",
    "twine>=6.1.0",
    "zensical>=0.0.28",
]

[project.scripts]
execsql = "execsql.cli:_legacy_main"
execsql-format = "execsql.format:main"

[project.urls]
Repository = "https://github.com/geocoug/execsql"
Issues = "https://github.com/geocoug/execsql/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/execsql"]

[tool.hatch.build.targets.wheel.shared-data]
"templates" = "execsql2_extras"

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    # "C90", # mccabe -- complexity inherited from original monolith; refactoring is a separate task
    # "D",   # pydocstyle -- enable after docstring coverage improves
    "E",   # pycodestyle[error]
    "F",   # pyflakes
    "N",   # pep8-naming
    "PLE", # pylint errors
    # "PT",  # flake8-pytest-style -- enable once test coverage grows
    # "S",   # flake8-bandit -- worth auditing, but noisy
    "SIM", # flake8-simplify
    # "TC",  # flake8-type-checking -- `from __future__ import annotations` already avoids runtime eval; TYPE_CHECKING blocks add complexity without benefit
    "UP",  # pyupgrade
    "W",   # pycodestyle[warning]
]
ignore = [
    # Legacy code style
    "E402",  # module level import not at top of file
    "E501",  # line too long — many long f-strings and SQL/HTML literals that can't be broken; re-enable once addressed
    "E731",  # do not assign a lambda expression, use a def
    # flake8-builtins — intentional shadowing in established APIs
    "A001",  # variable shadowing builtin — `quit`/`min` are intentional in prompt and GUI code
    "A002",  # function argument shadowing builtin — `type`, `str`, `quit`, `min` are established API parameter names
    # flake8-bugbear — not applicable
    "B008",  # typer.Option/typer.Argument must be in function defaults; this is the intended typer pattern
    "B027",  # empty-method-without-abstract-decorator — GuiBackend methods are intentional no-op defaults that backends optionally override
    "B904",  # raise-without-from-inside-except — ErrInfo already captures exception via exception_desc(); needs dedicated refactor pass
    "B905",  # zip-without-explicit-strict — DB drivers always return matching column/row counts
    # pep8-naming — legacy/established API names
    "N801",  # class name should use CapWords — DT_Integer, DT_Varchar etc. use a deliberate namespace-prefix convention; renaming is a breaking API change
    "N802",  # function name should be lowercase — db_SQLite, db_MySQL etc. embed the DBMS name; renaming is a breaking API change
    "N803",  # argument name should be lowercase — legacy DB adapter parameter names (Access_fn, SQLite_fn, DBMS_id) are established API
    "N806",  # variable in function should be lowercase — uppercase state-machine constants (_IN_QUOTED, _ESCAPED) and test mock class names are intentional
    "N818",  # exception name should have Error suffix — ErrInfo is the established name; renaming is a breaking API change
    # flake8-simplify — style preference
    "SIM105",  # use contextlib.suppress; explicit try/except/pass is clearer in this codebase
    "SIM108",  # ternary operator suggestions are often more complex than the original if/else
    # pyupgrade — style preference
    "UP017",  # Use datetime.UTC alias (not available in Python 3.10)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bumpversion]
current_version = "2.3.0"
commit = true
commit_args = "--no-verify"
tag = true
tag_name = "v{new_version}"
pre_commit_hooks = ["uv lock", "git add uv.lock"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]"
replace = """## [Unreleased]

______________________________________________________________________

## [{new_version}] - {now:%Y-%m-%d}"""

[tool.pytest.ini_options]
addopts = [
    "--cov=execsql",
    "--cov-branch",
    "--cov-report=xml",
    "--cov-fail-under=75",
    "--strict-markers",
    "--strict-config",
    "--color=yes",
    "-ra",
]
testpaths = ["tests"]
log_cli = true

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]
omit = [
    "_execsql/*",
    # GUI modules require a display/event loop to test
    "*/execsql/gui/desktop.py",
    "*/execsql/gui/tui.py",
    "*/execsql/metacommands/prompt.py",
    # DB adapters that require external servers or platform-specific drivers
    "*/execsql/db/postgres.py",
    "*/execsql/db/mysql.py",
    "*/execsql/db/oracle.py",
    "*/execsql/db/firebird.py",
    "*/execsql/db/sqlserver.py",
    "*/execsql/db/access.py",
    "*/execsql/db/dsn.py",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "_execsql/",
]

[tool.typos.default.extend-words]
# SQL table alias used throughout upsert templates
ot = "ot"
# Partial string used as intentional test data in test_metacommands.py
hel = "hel"
# Legacy variable name (self.fo) in EncodedFile — from upstream monolith
fo = "fo"

[tool.tox]
required = ["tox-uv"]
env_list = ["py310", "py311", "py312", "py313", "py314", "build"]
skip_missing_interpreters = true
isolated_build = true
basepython = "python3.13"

[tool.tox.env_run_base]
description = "Run tests under {base_python}"
extras = ["dev", "all"]
allowlist_externals = ["pytest"]
commands = [["pytest", "{posargs}"]]
# Pass through user/login env vars so getpass.getuser() works on Windows
# (tox strips the environment by default; without these it falls through to
# `import pwd` which does not exist on Windows).
passenv = ["USERNAME", "USER", "LOGNAME", "LNAME", "USERPROFILE", "HOMEDRIVE", "HOMEPATH"]

[tool.tox.env.build]
description = "Build distribution packages"
allowlist_externals = ["pytest"]
commands = [["uv", "build"]]
